wk_taa_taaqa/src/objects/Snapshots__c.object
<CustomObject>
    <description>Used to capture snapshots</description>
    <fields>
        <fullName>Actual_Won__c</fullName>
        <label>Actual (Won)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Created__c</fullName>
        <label>Created Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Lost__c</fullName>
        <label>Lost Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Open__c</fullName>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Won__c</fullName>
        <label>Won Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Amount__c</fullName>
        <label>Average Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Days_Left_This_Month__c</fullName>
        <formula>(5 * ( FLOOR( (  Last_Day_of_Month__c  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Last_Day_of_Month__c  - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE( CreatedDate )- DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE( CreatedDate )- DATE( 1900, 1, 8), 7 ) ) )
- Case(Month(Month__c),
                1,1,
                5,2,
                7,1,
                9,1,
                11,2,
                12,1,
                0)
+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days Left This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Days_Left_This_Year__c</fullName>
        <formula>(5 * ( FLOOR( (  Last_Date_of_Year__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Last_Date_of_Year__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE( CreatedDate )- DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE( CreatedDate )- DATE( 1900, 1, 8), 7 ) ) )
- Case(Month(DATEVALUE(CreatedDate)),
                1,8,
                2,7,
                3,7,
                4,7,
                5,5,
                6,5,
                7,4,
                8,4,
                9,3,
                10,3,
                11,1,
                12,1,
                0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days Left This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Days_This_Month__c</fullName>
        <formula>CASE(MOD( Month__c  - DATE(1985,6,24),7), 
  0 , CASE( MOD( Last_Day_of_Month__c - Month__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Last_Day_of_Month__c - Month__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Last_Day_of_Month__c - Month__c  ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Last_Day_of_Month__c - Month__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Last_Day_of_Month__c - Month__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Last_Day_of_Month__c - Month__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Last_Day_of_Month__c - Month__c  ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Last_Day_of_Month__c - Month__c )/7)*5)
- Case(Month(Month__c),
                1,1,
                5,2,
                7,1,
                9,1,
                11,2,
                12,1,
                0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Days_This_Year__c</fullName>
        <formula>CASE(MOD( DATE(YEAR(Month__c),1,1) - DATE(1985,6,24),7), 
  0 , CASE( MOD( Last_Date_of_Year__c - DATE(YEAR(Month__c),1,1) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Last_Date_of_Year__c - DATE(YEAR(Month__c),1,1) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Last_Date_of_Year__c - DATE(YEAR(Month__c),1,1) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Last_Date_of_Year__c - DATE(YEAR(Month__c),1,1) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Last_Date_of_Year__c - DATE(YEAR(Month__c),1,1) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Last_Date_of_Year__c - DATE(YEAR(Month__c),1,1) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Last_Date_of_Year__c - DATE(YEAR(Month__c),1,1) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Last_Date_of_Year__c- DATE(YEAR(Month__c),1,1) )/7)*5)
- CASE(YEAR(Month__c),
       2017,8,
       0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted__c</fullName>
        <formula>IF( ISNULL(Contacts_Made__c),null,Contacts_Made__c / Total_Dials__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contacts_Made__c</fullName>
        <label>Contacts Made</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Count__c</fullName>
        <label>Created Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Amount_Needed_For_Quota_This_Month__c</fullName>
        <formula>Quota_To_Go_This_Month__c /  Business_Days_Left_This_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Amount Needed For Quota This Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Level_Division__c</fullName>
        <label>High Level Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Year__c</fullName>
        <label>Last Date of Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_Month__c</fullName>
        <label>Last Day of Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Count__c</fullName>
        <label>Lost Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities__c</fullName>
        <label>Number of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Count__c</fullName>
        <label>Open Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Awarded__c</fullName>
        <formula>IF( BEGINS( Division__c , &quot;New Sales&quot;) ,
IF( Total_Dials__c  &gt;= 120 &amp;&amp; Contacts_Made__c  &gt;= 25, 2,
IF( Number_of_Opportunities__c  &gt;= 6, 3,
IF( Total_Amount__c  &gt;= 4000, 5,
IF( Quota_Attainment_value__c &gt;= 1 &amp;&amp; Quota_Attainment_value__c &lt; 1.1 ,25,
IF( Quota_Attainment_value__c &gt;= 1.1 &amp;&amp; Quota_Attainment_value__c &lt; 1.2 ,35,
IF( Quota_Attainment_value__c &gt;= 1.2, 45,0)))))),

IF( Division__c = &quot;Small Firm R&amp;L&quot; ,
IF( Total_Dials__c  &gt;= 100 &amp;&amp; Contacts_Made__c  &gt;= 25, 2,
IF( Number_of_Opportunities__c  &gt;= 5, 3,
IF( Total_Amount__c  &gt;= 2250, 5,
IF( Quota_Attainment_value__c &gt;= 1 &amp;&amp; Quota_Attainment_value__c &lt; 1.1 ,25,
IF( Quota_Attainment_value__c &gt;= 1.1 &amp;&amp; Quota_Attainment_value__c &lt; 1.2 ,35,
IF( Quota_Attainment_value__c &gt;= 1.2, 45,0)))))),

IF( Division__c = &quot;Retention&quot; ,
IF( Total_Dials__c  &gt;= 250, 2,
IF( Number_of_Opportunities__c  &gt;= 1, 3,
IF( Total_Amount__c  &gt;= 2000, 5,
IF( Quota_Attainment_value__c &gt;= 1 &amp;&amp; Quota_Attainment_value__c &lt; 1.1 ,25,
IF( Quota_Attainment_value__c &gt;= 1.1 &amp;&amp; Quota_Attainment_value__c &lt; 1.2 ,35,
IF( Quota_Attainment_value__c &gt;= 1.2, 45,0)))))),

IF( Division__c = &quot;Premier - Service&quot; ,
IF( Total_Dials__c  &gt;= 50 , 2,
IF( Number_of_Opportunities__c  &gt;= 1, 3,
IF( Total_Amount__c  &gt;= 600, 5,
IF( Quota_Attainment_value__c &gt;= 1 &amp;&amp; Quota_Attainment_value__c &lt; 1.1 ,25,
IF( Quota_Attainment_value__c &gt;= 1.1 &amp;&amp; Quota_Attainment_value__c &lt; 1.2 ,35,
IF( Quota_Attainment_value__c &gt;= 1.2, 45,0)))))),

IF( Division__c = &quot;Premier - Key Accounts&quot; ,
IF( Total_Dials__c  &gt;= 200, 2,
IF( Number_of_Opportunities__c  &gt;= 8, 3,
IF( Total_Amount__c  &gt;= 1500, 5,
IF( Quota_Attainment_value__c &gt;= 1 &amp;&amp; Quota_Attainment_value__c &lt; 1.1 ,25,
IF( Quota_Attainment_value__c &gt;= 1.1 &amp;&amp; Quota_Attainment_value__c &lt; 1.2 ,35,
IF( Quota_Attainment_value__c &gt;= 1.2, 45,0)))))),

IF( Division__c = &quot;Small Firm Field&quot; ,
IF( Total_Dials__c  &gt;= 40, 2,
IF( Number_of_Opportunities__c  &gt;= 4, 3,
IF( Total_Amount__c  &gt;= 10000,5,
IF( Quota_Attainment_value__c &lt; 1.1 ,25,
IF( Quota_Attainment_value__c &gt;= 1.1 &amp;&amp; Quota_Attainment_value__c &lt; 1.2 ,35,
IF( Quota_Attainment_value__c &gt;= 1.2, 45,0)))))),
0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Amount__c</fullName>
        <label>Quota Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quota_Attainment__c</fullName>
        <formula>IF( ISNULL(Amount_Won__c),NULL,Amount_Won__c /  Quota_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quota Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quota_Attainment_value__c</fullName>
        <label>Quota Attainment (value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quota_To_Go_This_Month__c</fullName>
        <formula>Quota_Amount__c - Amount_Won__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quota To Go This Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <formula>DateValue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Dials__c</fullName>
        <label>Total Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>DATEValue(CreatedDate) - 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Won_Count__c</fullName>
        <label>Won Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Quota__c</fullName>
        <label>% of Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>High_Level_Division__c</columns>
        <columns>Division__c</columns>
        <columns>Snapshot_Date__c</columns>
        <columns>Created_Count__c</columns>
        <columns>Lost_Count__c</columns>
        <columns>Open_Count__c</columns>
        <columns>Won_Count__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Opps_created_this_week_by_HLD</fullName>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>High_Level_Division__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Created_Count__c</columns>
        <columns>Amount_Created__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>All Opps created this week by HLD</value>
        </filters>
        <label>All Opps created this week by HLD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Research_Learning_Software</fullName>
        <columns>NAME</columns>
        <columns>High_Level_Division__c</columns>
        <columns>Division__c</columns>
        <columns>Snapshot_Date__c</columns>
        <columns>Created_Count__c</columns>
        <columns>Lost_Count__c</columns>
        <columns>Open_Count__c</columns>
        <columns>Won_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>High_Level_Division__c</field>
            <operation>equals</operation>
            <value>Research &amp; Learning,Software</value>
        </filters>
        <label>Research &amp; Learning &amp; Software</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TODAY</fullName>
        <columns>NAME</columns>
        <columns>Last_Date_of_Year__c</columns>
        <columns>Last_Day_of_Month__c</columns>
        <columns>Month__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>TODAY</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Snapshots Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>